header, footer style change

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- include 는 항상 같은 부분 / block 은 매번 추가될 수 있는 부분에 대해서 설정한다. -> extends로 받아온다 -->
+
 {% include 'head.html' %}
 
 <body>
