--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,2 +1,10 @@
-<div style="height: 10rem; background-color: #ffffcc; margin:2rem; border-radius: 1rem;">
+<div>
+    <div style="text-align: center">
+        <span>공지사항</span>
+        <span>자유게시판</span>
+        <span>고객센터</span>
+    </div>
+    <div>
+        <h5>Pragmatic</h5>
+    </div>
 </div>
