--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,13 @@
-<div style="height: 10rem; background-color: #ffffcc; margin:2rem; border-radius: 1rem;">
-    # border-radius : 모서리를 둥글게
+<div style="text-align: center">
+    <!-- border-radius : 모서리를 둥글게 -->
+    <div>
+        <h1>What the...</h1>
+    </div>
+    <div>
+        <span>nav1</span>
+        <span>nav2</span>
+        <span>nav3</span>
+        <span>nav4</span>
+        <!-- span은 좌우로 나열되는 tag. 보통 버튼에 사용 -->
+    </div>
 </div>
