--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,13 @@
-<div>
-    <div style="text-align: center">
+<div style="text-align: center">
+
+    <div style = "margin : 1.5rem 0;">
         <span>공지사항</span>
         <span>자유게시판</span>
         <span>고객센터</span>
     </div>
-    <div>
-        <h5>Pragmatic</h5>
+
+    <div style = "margin: 1.5rem 0;">
+            <h5>Pragmatic</h5>
     </div>
+
 </div>
