--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,12 +1,12 @@
 <div style="text-align: center">
 
-    <div style = "margin : 1.5rem 0;">
+    <div class="progmatic_footer_button">
         <span>공지사항</span>
         <span>자유게시판</span>
         <span>고객센터</span>
     </div>
 
-    <div style = "margin: 1.5rem 0;">
+    <div class="progmatic_footer_logo">
             <h5>Pragmatic</h5>
     </div>
 
