--- a/templates/header.html
+++ b/templates/header.html
@@ -1,11 +1,12 @@
 <div style="text-align: center">
     <!-- border-radius : 모서리를 둥글게 -->
-    <div style="margin: 2rem 0; font-family: 'Permanent Marker', cursive;">
+    <div class = 'progmatic_header_logo'>
+        {# bass.css에 class를 만들어서 서로 연결시켜준다. 이 연결시키는 내용은 head.html에 입력. #}
         <!-- 2rem 0 : 2는 상하의 여백, 0은 좌우의 여백 -->
         <!-- 모종의 이유로 Permanent Marker 글꼴이 설정되지 않으면 cursive라는 글꼴을 사용하라는 뜻 -->
         <h1>What the...</h1>
     </div>
-    <div style="margin-bottom: 2rem 0;">
+    <div class = 'progmatic_header_button'>
         <span>nav1</span>
         <span>nav2</span>
         <span>nav3</span>
