--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -2,8 +2,27 @@
 
 {% block content %}
 
+    <style>
+
+        .testing {
+            background-color: yellow;
+            margin: 1rem;
+            height: 48px;
+            width: 48px;
+            border-radius: .5rem;
+        }
+
+    </style>
+
     <div style="height: 20rem; background-color: #ffffcc; margin:2rem; border-radius: 1rem;">
-        <h1>바꼈나?</h1>
+        <h1>TEST</h1>
+
+        <div class="testing" style="display: block">block</div>
+        <div class="testing" style="display: inline">block</div>
+        <div class="testing" style="display: inline-block">block</div>
+        <div class="testing" style="display: none">block</div>
+        <div class="testing">block</div>
+
     </div>
 
 {% endblock %}
