--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -2,27 +2,21 @@
 
 {% block content %}
 
-    <style>
+    <div style = 'margin: 2rem; text-align: center'>
+        <h1>METHOD</h1>
 
-        .testing {
-            background-color: yellow;
-            margin: 1rem;
-            height: 48px;
-            width: 48px;
-            border-radius: .5rem;
-            display: inline-block; <!-- block을 가로로 연결해 표시 -->
-        }
+        <!-- post로 보내려면 form 사용해야 된다. + method='host' 설정도 필요 안하면 GET으로 감. 이외에 기본적인 접근은 GET 방식 -->
+        <form action="/account/hello_world/" method="post">
+            {% csrf_token %}
+            <!-- 버튼에 csrf 연결해주는 것 -->
+            <input type="submit" class="btn btn-primary rounded-pill px-4">
+            <!-- class=~ : bootstrap에서 class 부분만 긁어와서 사용하면 된다. -->
+            <!-- rounded-pill : 버튼을 둥글게 -->
+            <!-- px-4 : padding 을 쉽게 줄 수 있는 방법 - bootstrap의 방식 -->
+            <!-- input type='submit' : button 생성 -->
+        </form>
 
-    </style>
-
-    <div style="height: 20rem; background-color: #ffffcc; margin:2rem; border-radius: 1rem; overflow: scroll">  <!-- overflow: scroll 은 넘치는 부분에 대해 스크롤바를 생성 -->
-        <h1>TEST</h1>
-
-        <div class="testing" style="height : 48px; width: 48px">px</div>
-        <div class="testing" style="height: 3rem; width: 3rem">rem</div>
-        <div class="testing" style="height: 3em; width: 3em">em</div>
-        <div class="testing" style="height: 30%; width: 30%">%</div> <!-- 바로 위의 부모 태그만의 30%씩을 따라간다 -->
-
+        <h3>{{ text }}</h3>
     </div>
 
 {% endblock %}
