--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -18,7 +18,9 @@
             <!-- input type='submit' : button 생성 -->
         </form>
 
-        <h3>{{ text }}</h3>
+        {% for hello_world in hello_world_list %}
+            <h3>{{ hello_world.text }}</h3>
+        {% endfor %}
     </div>
 
 {% endblock %}
