after login or create account, display logout button

--- a/templates/header.html
+++ b/templates/header.html
@@ -9,8 +9,24 @@
     <div class = 'progmatic_header_button'>
         <span>nav1</span>
         <span>nav2</span>
-        <span>nav3</span>
-        <span>nav4</span>
+        {% if not user.is_authenticated %}
+        <span>
+            <a href="{% url 'accountapp:login' %}">
+                Login
+            </a>
+        </span>
+        <span>
+            <a href="{% url 'accountapp:create' %}">
+                Sign up
+            </a>
+        </span>
+        {% else %}
+        <span>
+            <a href='{% url 'accountapp:logout' %}'>
+                Logout
+            </a>
+        </span>
+        {% endif %}
         <!-- span은 좌우로 나열되는 tag. 보통 버튼에 사용 -->
     </div>
 </div>
