--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 
 {% block content %}
 
-    <div class="text-center">
+    <div class="text-center mw-500 m-auto">
         <div class="m-5"> <!-- bootstrap의 명령어 m-5는 사방으로 5의 margin을 두라는 뜻 -->
             <h4>
                 Login
@@ -11,7 +12,7 @@
         <div>
             <form action="{% url 'accountapp:login' %}" method="post">
                 {% csrf_token %}
-                {{ form }}
+                {% bootstrap_form form %}
                 <div class="m-3">
                     <input type="submit"
                            class="btn btn-dark rounded-pill px-5">
