--- a/templates/head.html
+++ b/templates/head.html
@@ -15,4 +15,27 @@
     {#  static files link  #}
     <link rel="stylesheet" type='text/css' href="{% static 'base.css' %}">
     {#  link 적고 tap 누르면 자동으로 적어준다. href는 경로 #}
+
+    <style> {# 나눔스퀘어 - 글꼴 적용 #}
+        @font-face {
+            font-family: 'NanumSquareR';
+            src: local('NanumSquareR'),
+            url("{% static 'fonts/NanumSquareR.otf' %}") format("opentype");
+        }
+        @font-face {
+            font-family: 'NanumSquareEB';
+            src: local('NanumSquareEB'),
+            url("{% static 'fonts/NanumSquareEB.otf' %}") format("opentype");
+        }
+        @font-face {
+            font-family: 'NanumSquareB';
+            src: local('NanumSquareB'),
+            url("{% static 'fonts/NanumSquareB.otf' %}") format("opentype");
+        }
+        @font-face {
+            font-family: 'NanumSquareL';
+            src: local('NanumSquareL'),
+            url("{% static 'fonts/NanumSquareL.otf' %}") format("opentype");
+        }
+    </style>
 </head>
