--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -4,9 +4,17 @@
 
     <div class="text-center mw-500 m-auto">
         <div class="m-5"> <!-- bootstrap의 명령어 m-5는 사방으로 5의 margin을 두라는 뜻 -->
+            {% if target_user.profile %}
+                <img src="{{ target_user.profile.image.url }}" alt="">
+                <h4>{{ target_user.profile.nickname }}</h4>
+                <h5> {{ target_user.profile.message }}</h5>
+            {% else %}
             <h4>
-                {{ target_user.username }}
+                <a href="{% url 'profileapp:create' %}">
+                    Create Profile
+                </a>
             </h4>
+            {% endif %}
         </div>
         <div>
             {{ target_user.date_joined }}
