--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -5,8 +5,15 @@
     <div class="text-center mw-500 m-auto">
         <div class="m-5"> <!-- bootstrap의 명령어 m-5는 사방으로 5의 margin을 두라는 뜻 -->
             {% if target_user.profile %}
-                <img src="{{ target_user.profile.image.url }}" alt="">
-                <h4>{{ target_user.profile.nickname }}</h4>
+                <img src="{{ target_user.profile.image.url }}"
+                     class="profile_image m-4"
+                     alt="profile image">
+                <h2 class="NNS_B">
+                    {{ target_user.profile.nickname }}
+                    <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+                        edit
+                    </a>
+                </h2>
                 <h5> {{ target_user.profile.message }}</h5>
             {% else %}
             <h4>
