7/29 - google fonts icons - edit button

--- a/templates/head.html
+++ b/templates/head.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" type='text/css' href="{% static 'base.css' %}">
     {#  link 적고 tap 누르면 자동으로 적어준다. href는 경로 #}
 
+    {# MATERIAL ICONS LINK #}
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet">
+
     <style> {# 나눔스퀘어 - 글꼴 적용 #}
         @font-face {
             font-family: 'NanumSquareR';
