--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -14,11 +14,15 @@
         <div>
             {# 게시글 대표 이미지 / 게시글 내용 #}
             <img src="{{ target_article.image.url }}" alt="">
-            {{ target_article.content }}
+            <p>Content : {{ target_article.content }}</p>
             <div>
                 <a href="{% url 'articleapp:update' pk=target_article.pk %}"
                 class="btn btn-success rounded-pill px-5">
                     Update
+                </a>
+                <a href="{% url 'articleapp:delete' pk=target_article.pk %}"
+                class="btn btn-success rounded-pill px-5">
+                    Delete
                 </a>
             </div>
        </div>
