--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -35,6 +35,8 @@
 
     </script>
 
+    {% include 'snippets/pagination.html' %}
+
     <div class="text-center my-5">
         <a href="{% url 'articleapp:create' %}"
            class="btn btn-dark rounded-pill material-icons">
