--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -39,9 +39,9 @@
 
         <hr>
 
-        <div>
+        <div class="text-center my-4">
             {# 댓글 내용, 작성 #}
-
+            {% include 'commentapp/create.html' %}
         </div>
     </div>
 
